syntax = "proto3";

package mpc;

message BaseOutput {
    int64 code = 1;
    string message = 2;
}